# where-to-live

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
frontend/: Dockerfile  nginx.conf  package.json
